feat: penultimate charter and readme

--- a/CGCharter.html
+++ b/CGCharter.html
@@ -6,7 +6,7 @@
     </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="//www.w3.org/StyleSheets/TR/base">
+    <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/base">
     <style>
       body {
         max-width: 60em;
@@ -28,41 +28,24 @@
     </style>
   </head>
   <body>
-    <p class="remove">
-      {TBD: This is a draft template that Community or Business Groups MAY
-      choose to use for their Group Charter. You may edit your charter to
-      remove or change the text provided here. Community Groups SHOULD have
-      charters as a way to build shared understanding within a group about
-      activities, and to attract new participants who appreciate a clear
-      description of the group's scope and deliverables.}
-    </p>
-    <p class="remove">
-      {TBD: The charter sections below include notes (marked with ï¿½{TBDï¿½) on
-      what to include and recommended text. Please remember to remove the notes
-      in your specific charter.}
-    </p>
     <h1>
       Portable Personal Data Preferences Community Group Charter
     </h1>
     <p>
       <span class="remove">{TBD: remove next sentence before submitting for
-      approval}</span> This Charter is work in progress. To submit feedback,
-      please use <a href="https://github.com/inclusive-design/cg-portable-personal-data-preferences/issues">
+      approval}</span> This Charter is work in progress: it remains to specify
+      a start date.  To submit feedback, please use <a href="https://github.com/inclusive-design/cg-portable-personal-data-preferences/issues">
       cg-portable-personal-data-preferences</a> Issues where the Charter is
       being developed.
     </p>
     <ul>
-      <li>This Charter: <a href="https://github.com/inclusive-design/cg-portable-personal-data-preferences/blob/dev/CGCharter.html">https://github.com/inclusive-design/cg-portable-personal-data-preferences/blob/dev/CGCharter.html</a>
+      <li>This Charter: <a href="https://inclusive-design.github.io/cg-portable-personal-data-preferences/CGCharter.html">https://inclusive-design.github.io/cg-portable-personal-data-preferences/CGCharter.html</a>
       </li>
       <li>Previous Charter: None -- this is the first version of the charter.
       </li>
       <li>Start Date: <span class="remove">{TBD: date the charter takes effect,
       estimate if not known. Update this if the charter is revised and include
       a link to the previous version of the charter.}</span>
-      </li>
-      <li>Last Modifed: <span class="remove">{TBD: If the system does not
-      automatically provide information about the date of the last
-      modification, it can be useful to include that in the charter.}</span>
       </li>
     </ul>
     <h2 id="goals">
@@ -183,7 +166,7 @@
     </h2>
     <p>
       The group operates under the <a href=
-      "https://www.w3.org/community/about/agreements/">Community and Business
+      "https://www.w3.org/community/about/process/">Community and Business
       Group Process</a>. Terms in this Charter that conflict with those of the
       Community and Business Group Process are void.
     </p>
