feat: add start date to charter

--- a/CGCharter.html
+++ b/CGCharter.html
@@ -32,20 +32,15 @@
       Portable Personal Data Preferences Community Group Charter
     </h1>
     <p>
-      <span class="remove">{TBD: remove next sentence before submitting for
-      approval}</span> This Charter is work in progress: it remains to specify
-      a start date.  To submit feedback, please use <a href="https://github.com/inclusive-design/cg-portable-personal-data-preferences/issues">
-      cg-portable-personal-data-preferences</a> Issues where the Charter is
-      being developed.
+      To submit feedback, please use <a href="https://github.com/inclusive-design/cg-portable-personal-data-preferences/issues">
+      cg-portable-personal-data-preferences</a> Issues.
     </p>
     <ul>
       <li>This Charter: <a href="https://inclusive-design.github.io/cg-portable-personal-data-preferences/CGCharter.html">https://inclusive-design.github.io/cg-portable-personal-data-preferences/CGCharter.html</a>
       </li>
       <li>Previous Charter: None -- this is the first version of the charter.
       </li>
-      <li>Start Date: <span class="remove">{TBD: date the charter takes effect,
-      estimate if not known. Update this if the charter is revised and include
-      a link to the previous version of the charter.}</span>
+      <li>Start Date: Thursday, July 29, 2021.
       </li>
     </ul>
     <h2 id="goals">
